# nanochat_desktop

./: .gitignore  AppImagefile  BUILD_INSTRUCTIONS.md  CODE_REVIEW_PLAN.md  Cargo.toml  IMAGE_DOWNLOAD_GUIDE.md  IMPROVEMENT_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  RUN_APP.md  STARTUP_TEST_REPORT.md  build.sh  com.jcrabapple.NanoGPTChat.yaml  nanochat.desktop  nanochat_desktop_plan.md  nanogpt.c  pyproject.toml  requirements.txt
NanoGPTChat.AppDir/: .DirIcon  AppRun
NanoGPTChat.AppDir/nanogpt_chat/: main.py
NanoGPTChat.AppDir/nanogpt_chat/exceptions/: __init__.py
NanoGPTChat.AppDir/nanogpt_chat/ui/: chat_widget.py  main_window.py  settings_dialog.py  sidebar.py  themes.py
NanoGPTChat.AppDir/nanogpt_chat/utils/: __init__.py  connectivity.py  logger.py
nanochat.appimage/: AppRun.sh  nanochat.desktop
nanogpt_chat/: main.py
nanogpt_chat/ui/: chat_widget.py  main_window.py  settings_dialog.py  sidebar.py
nanogpt_chat/utils/: __init__.py  credentials.py  settings.py
src/: lib.rs
src/api/: client.rs
src/database/: mod.rs  sqlite.rs  tests.rs
src/security/: credentials.rs
src/utils/: mod.rs
tests/python/: test_basic.py
