[package]
name = "nanogpt-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nanogpt_core"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1.18"
home = "0.5"
dirs = "5.0"
anyhow = "1.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = "0.20"
