[project]
name = "nanogpt-chat"
version = "0.1.0"
description = "Linux Desktop AI Chat Application using NanoGPT API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NanoGPT Chat Team"}
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanogpt_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
